# lime

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: build.yml  test.yml  test_linux.yml  test_windows.yml
cmake/: cpm.cmake  mingw-toolchain.cmake  mingw-x64.cmake  mingw-x86.cmake  proxy.cmake  proxy.cpp.in  proxy.hpp.in
include/: module.hpp  page.hpp
include/constants/: architecture.hpp  key_codes.hpp  mnemonics.hpp  protection.hpp
include/hooks/: detour.hpp  detour.inl
include/lime/: address.hpp  address.inl  entrypoint.hpp  instruction.hpp  lib.hpp  lib.inl  module.hpp  page.hpp  signature.hpp
include/lime/constants/: key_codes.hpp  mnemonics.hpp  os.hpp  protection.hpp
include/lime/hooks/: convention.hpp  convention.inl  detour.hpp  hook.hpp  hook.inl
include/lime/utility/: address.inl  entrypoint.inl  keyboard.hpp  signature.hpp  signature.inl
include/lime/utils/: convention.hpp  convention.inl  signature.hpp
include/utility/: address.hpp  address.inl  console.hpp  entrypoint.hpp  entrypoint.inl  memory.hpp  memory.inl  signature.hpp  signature.inl
private/: constants.hpp  disasm.hpp  lib.impl.hpp  module.linux.impl.hpp  utils.linux.hpp
src/: address.cpp  console.linux.cpp  console.windows.cpp  detour.cpp  disasm.cpp  entrypoint.cpp  entrypoint.linux.cpp  entrypoint.static.cpp  entrypoint.win.cpp  hook.cpp  hooks.hook.cpp  instruction.cpp  keyboard.linux.cpp  keyboard.windows.cpp  lib.cpp  lib.linux.cpp  lib.win.cpp  memory.linux.cpp  memory.windows.cpp  mnemonics.cpp  module.linux.cpp  module.linux.impl.cpp  module.win.cpp  module.windows.cpp  page.linux.cpp  page.win.cpp  page.windows.cpp  scan.cpp  scan.linux.cpp  signature.cpp  utils.linux.cpp  utils.signature.cpp
src/disasm/: disasm.cpp  disasm.hpp
tests/: CMakeLists.txt  address.test.cpp  console.test.cpp  detour.test.cpp  disasm.test.cpp  entrypoint.test.cpp  hook.test.cpp  instruction.test.cpp  keyboard.test.cpp  lib.test.cpp  main.cpp  memory.test.cpp  module.test.cpp  os.test.cpp  page.test.cpp  signature.test.cpp
tests/lib/: CMakeLists.txt  main.cpp
tools/: inject_so.sh  listen.sh
